Changelog for current version:

Changelog for 0.11.0:
  * Make some errors recoverable. Prpltwtr should try to reconnect, and not disable the account. I know this covers the case of sleep on Windows; hopefully others as well
  * Load user info dynamically when requesting info for a user not in the buddy list
  * Fix multipage requests for home timeline and lists. More than 200 tweets should now be received (up to 800 for twitter.com, depending on the value set in the account preferences). Also fix a race condition where the timer refreshes could start before the initial retreive finished (much more critical after the multipage fix)
  * Add c:\PortableApps\PortableApps to the installer
  * Tell the plugin(s) that we support offline messages (b/c twitter does, obviously) 

Changelog for 0.10.0:
  * Windows executable is compiled to the main directory (don't ask why)
  * Add subscribed lists (not just created lists). The list names changed; you'll need to delete the old lists
  * Send all requests through the account specific proxy, not the global one. Oops.
  * Allow installation of the non-stripped DLLs only (without dbgsym files)

Changelog for 0.9.0:
  * Fix crash when closing a window with pending buddy icons to look up
  * Identi.ca work. Twitter requires OAuth (no longer an option); status.net sites can use either. Note that you'll need to register your own custom application if you want to use OAuth with status.net sites and provide the consumer key and secret in the account options.
  * Restore "delete" tweet option
  * Split the prpltwtr plugin into three: libprpltwtr for the infrastructure, libprpltwtr_twitter for Twitter, and libprpltwtr_statusnet for identi.ca, etc. You may need to manually delete the old versions (but I hope not)
  * Let the user choose the default alias. Suggested by @space_tiger. If you already added your friends as buddies, the fastest thing to do is delete the group and let prpltwtr re-add them after changing this option.
